--- a/src/components/FeedbackBox/FeedbackBox.css
+++ b/src/components/FeedbackBox/FeedbackBox.css
@@ -1,27 +1,32 @@
+
 .chat-container {
-  width: 95%;
+  width: 90%;
+  max-width: 1200px; 
   padding: 20px;
   margin: 0 auto;
 }
 
+
 .chat-header { 
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 15px;
   font-family: 'Poppins', sans-serif;
   background-color: #EEEEEE;
   padding: 12px;
   border-radius: 6px;
 }
 
+
 .chat-history {
   max-height: 400px;
   overflow-y: auto;
   padding: 10px;
-  border-bottom: 2px solid #eee;
   background: white;
   border-radius: 6px;
+  border-bottom: 2px solid #eee;
 }
+
 
 .chat-message {
   margin-bottom: 15px;
@@ -31,45 +36,40 @@
   background-color: #f9f9f9;
 }
 
+
 .chat-message-header {
   display: flex;
-  justify-content: space-between; /* Nume și dată pe aceeași linie */
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: nowrap; /* Evită trecerea pe linie nouă */
   font-weight: bold;
   font-size: 1em;
   color: #333;
-  overflow: hidden; /* Previne depășirea containerului */
+  overflow: hidden;
 }
 
-.chat-name {
-  font-size: 1em;
-  color: #333;
-  max-width: 60%; /* Previne suprapunerea cu timestamp */
+.chat-name { 
+  text-align: left;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .chat-timestamp {
   font-size: 0.85em;
   color: #888;
-  max-width: 40%; /* Asigură spațiu pentru timestamp */
+  max-width: 40%;
   text-align: right;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.chat-text,
-.chat-translation {
-  font-size: 1em;
-}
+
+
 
 .chat-translation {
   color: purple;
   font-style: italic;
 }
+
 
 .chat-separator {
   border: none;
@@ -83,21 +83,16 @@
   margin-top: 15px;
 }
 
-.chat-input .chat-name { 
-  padding: 10px;
-  border-radius: 6px;
-  border-width: 0.1px;
-}
-
+.chat-input .chat-name,
 .chat-message-box {
   width: 100%;
   padding: 12px;
-  margin-bottom: 10px;
   font-size: 1rem;
-  font-style: italic;
   border-radius: 6px;
-  border-width: 0.1px;
+  border: 1px solid #ccc;
   margin-top: 5px;
+  transition: border-color 0.3s ease, border-style 0.3s ease;
+  font-family: 'Poppins', sans-serif;
 }
 
 .chat-message-box {
@@ -105,12 +100,14 @@
   height: 80px;
 }
 
-.chat-message-box:focus, 
+
+.chat-message-box:focus,
 .chat-input .chat-name:focus {
   border-color: purple;
   border-style: dashed;
-  outline: none; 
+  outline: none;
 }
+
 
 .chat-send {
   padding: 12px;
@@ -121,11 +118,14 @@
   cursor: pointer;
   font-size: 1.1em;
   transition: background 0.3s ease;
+  margin-top: 10px;
+  max-width: 200px;
 }
 
 .chat-send:hover {
   background: grey;
 }
+
 
 .refresh {
   max-height: 400px; 
@@ -133,3 +133,4 @@
   border: 1px solid #ccc; 
   padding: 10px;
 }
+
