--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     background-image: url('./assets/images/background.jpg');
     background-color: rgba(255, 255, 255, 0.9); 
