--- a/src/components/FeedbackBox/FeedbackBox.css
+++ b/src/components/FeedbackBox/FeedbackBox.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-
+/*d
 .chat-header { 
   font-size: 20px;
   font-weight: bold;
@@ -17,7 +17,7 @@
   border-radius: 6px;
 }
 
-/*
+
 .chat-history {
   max-height: 400px;
   overflow-y: auto;
